# tana-helper

./: .eslintrc.json  .gitignore  .gitmodules  DEVELOPING.md  Dockerfile  LICENSE.md  README.md  README_PINECONE.md  README_VISUALIZER.md  README_WEBHOOKS.md  Spacefile  TanaHelper  dependencies.txt  env.template  esbuild.config.mjs  frags  langchain.ts  logging.conf  main.py  main.ts  package.json  pyproject.toml  requirements.txt  tana-helper.code-workspace  tsconfig.json  vercel.json  version.code-search  webpack.config.js
docs/: README_VISUALIZER.md  README_WEBHOOKS.md
menubarapp/Tana Helper/Tana Helper.xcodeproj/: project.pbxproj
release/: .env.template  README.md  add_remote.sh  build.sh  build_all.sh  build_dmg.sh  build_funcs.sh  build_no_pull.sh  build_one.sh  dmg.sh  notarize.py  switch_branch.sh
release/universal/: build.sh  build_win.sh  switch_branch.sh
service/: PROMPT.txt  README.md  Spacefile  build.sh  env.template  message.py  mkdocs.yml  myuvicorn.py  pyproject.toml  start.py  start.spec  tanahelper copy.spec  tanahelper.py  tanahelper.spec  tanahelper_win.spec  universal.sh
service/docs/: index.md
service/icons/: TanaHelpeService.icns
service/service/: dependencies.py  json2tana.py  llamaindex.py  logconfig.py  main.py  settings.py  small_main.py  tana_types.py  tanaparser.py  txntimer.py
service/service/endpoints/: api_docs.py  calendar.py  chroma.py  class_diagram.py  cleanups.py  configure.py  exec_code.py  graph_view.py  home.py  inlinerefs.py  jsonify.py  llamaindex.py  logmonitor.py  mistral.py  obsidian_migrate.py  pinecone.py  preload.py  proxy.py  qdrant.py  research.py  topics.py  weaviate.py  webhooks.py
service/service/scripts/: calendar_auth.scpt  getcalendar.swift  index_data.py
service/service/static/vault/.obsidian/: community-plugins.json  workspace.json
service/service/static/vault/.obsidian/plugins/make-md/: data.json
service/service/static/vault/.obsidian/plugins/obsidian-front-matter-title-plugin/: main.js
service/static/vault/.obsidian/plugins/obsidian-front-matter-title-plugin/: data.json
service/tests/: test_calendar.py  test_chroma.py  test_proxy.py  test_types.py
src/: calendar.ts  dependencies.py  logging.py  main.py  main.ts  pinecone.ts  server.ts  tana_types.py  usage.ts
src/services/: chains.py  chroma.py  configure.py  exec_code.py  graph_view.py  inlinerefs.py  jsonify.py  pinecone.py  proxy.py  tanatool.py  weaviate.py  webhooks.py
webapp/: .gitignore  ConfigurationPanel.tsx  Configure.tsx  Graph.tsx  GraphApp.tsx  GraphWorkspace.tsx  build.sh  env.template  esbuild.config.mjs  index.html  package.json
webapp/src/: API.tsx  App.tsx  ClassDiagram.css  ClassDiagram.tsx  ClassDiagramApp.tsx  ClassDiagramControls.tsx  ClassDiagramWorkspace.tsx  ConfigurationPanel.tsx  Configure.tsx  Docs.tsx  Graph.css  Graph.tsx  GraphApp.tsx  GraphWorkspace.tsx  Home.css  Home.tsx  Logs.css  Logs.tsx  MainUI.css  MainUI.tsx  Mermaid.tsx  Root.tsx  SimpleMain.tsx  TanaHelperContext.tsx  TanaHelperLogViewer.css  TanaHelperLogViewer.tsx  UILayout.tsx  VisualizerContext.tsx  VisualizerControls.tsx
webapp/src/components/: Api.tsx  (+20 more)
(+4 files in other folders)
