[project]
name = "tana-helper"
version = "0.2.2" # TODO: get this from build environment somehow
description = "Small helper service for Tana to add various extensions via MakeAPI calls"
authors = [{ name = "verveguy", email = "bpjadam@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.11.7"
dependencies = [
    "uvicorn>=0.23.2",
    "openai~=1.42.0",
    "fastapi~=0.111.0",
    "pytz~=2023.3.post1",
    "Jinja2~=3.1.2",
    "python-dotenv~=1.0.0",
    "httpx~=0.25.0",
    "rich~=13.6.0",
    "snowflake-id~=0.0.5",
    "aiofiles~=23.2.1",
    "ratelimit~=2.2.1",
    "chromadb~=0.5.0",
    "weaviate-client~=3.26.7",
    "pydantic-settings~=2.4.0",
    "pyqt6~=6.7.1",
    "llama-index~=0.9.36",
    "pinecone-client~=3.2.2",
    "ollama~=0.1.5",
    "mkdocs-material~=9.5.13",
    "jiter>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest~=7.4.3",
    "python-dotenv~=1.0.0",
    "pyinstaller==6.2.0", # keep this old deliberately to avoid virus false positives
    "ruff>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
